# vpnbridger

./: meson.build  org.example.App.json
data/: org.example.App.desktop.in  org.example.App.gschema.xml
po/: POTFILES  meson.build
src/: main.py  meson.build  select_vpn.py  select_vpn.ui  vpn.gresource.xml  vpn.in
